--- a/Quizzes/Quizz-40/layout_demo.kv
+++ b/Quizzes/Quizz-40/layout_demo.kv
@@ -1,25 +1,21 @@
-Screen:
-    size: 500, 500
-
-
+MDScreen:
+    size:500,500
     MDBoxLayout:
-        id: main_box
-        orientation: 'vertical'
-        mb_bg_color: "#FFFFFF"
+        id: main_screen
+        orientation:"vertical"
+        md_bg_color: "#FFFFFF"
 
         MDLabel:
-            id: name
-            text:"Alex"
-            halign: 'center'
-            font_style: 'H3'
-            text_color: "FFFFFF"
-            pos_hint: {'center_x':0.5, 'center_y':0.5}
+            id:name
+            text: "Alex"
+            halign: "center"
+            font_style: "H1"
+            theme_text_color: "Custom"
+            text_color: 0, 0, 0, 1
+            pos_hint: {"center_x": .5, "center_y": .5}
 
         MDRaisedButton:
-            id: color_button
-            text: 'Change Theme'
-            pos_hint: {'right': 1, 'center_y': .5}
-            size_hint: .5, .5
-            on_release: app.change_color()
-            md_bg_color: "#FFFFFF"
-
+            id: changebutton
+            text: "Dark Mode"
+            pos_hint: {"center_x": 0.06, "center_y": 0.1}
+            on_release: app.change_theme()
