--- a/Quizzes/Quizz-41/layout.kv
+++ b/Quizzes/Quizz-41/layout.kv
@@ -1,66 +1,106 @@
 MDScreen:
+    id : screen
     size:500,500
     MDBoxLayout:
-        id: main_screen
-        orientation:"vertical"
-        
-        MDLabel:
-            text:"Tic Tac Toe by Bob"
-            halign:"center"
-            theme_text_color:"Custom"
-            text_color:0,0,0,1
-            font_style:"H4"
-            size_hint_y:None
-            height:dp(50)
-        MDLabel:
-            id:turn_label
-            text:"It is X's turn"
-            halign:"center"
-            theme_text_color:"Custom"
-            text_color:0,0,0,1
-            font_style:"H4"
-            size_hint_y:None
-            height:dp(50)
+        id: main_box
+        size_hint: .8, .8
+        orientation: 'vertical'
+        pos_hint: {'center_x': .5, 'center_y': .5}
+        MDBoxLayout:
+            id: box1
+            size_hint: 1, .2
+            orientation: 'vertical'
+            MDLabel:
+                id: label1
+                text: 'Tic Tac Toe by Bob'
+                halign: 'center'
+                font_style: 'H3'
+            MDLabel:
+                id: label2
+                text: "Current Player:" + app.player
+                halign: 'center'
+                font_style: 'H5'
 
-        GridLayout:
-            cols:3
-            rows:3
-            size_hint_y:None
-            height:dp(300)
-            MDRectangleFlatButton:
-                id:button1
-                text:""
-                on_release:app.button_pressed(1)
-            MDRectangleFlatButton:
-                id:button2
-                text:""
-                on_release:app.button_pressed(2)
-            MDRectangleFlatButton:
-                id:button3
-                text:""
-                on_release:app.button_pressed(3)
-            MDRectangleFlatButton:
-                id:button4
-                text:""
-                on_release:app.button_pressed(4)
-            MDRectangleFlatButton:
-                id:button5
-                text:""
-                on_release:app.button_pressed(5)
-            MDRectangleFlatButton:
-                id:button6
-                text:""
-                on_release:app.button_pressed(6)
-            MDRectangleFlatButton:
-                id:button7
-                text:""
-                on_release:app.button_pressed(7)
-            MDRectangleFlatButton:
-                id:button8
-                text:""
-                on_release:app.button_pressed(8)
-            MDRectangleFlatButton:
-                id:button9
-                text:""
-                on_release:app.button_pressed(9)
-            
+        MDBoxLayout:
+            id: box2
+            size_hint: 1, .8
+            orientation: 'vertical'
+            pos_hint: {'center_x': .5, 'center_y': .5}
+            MDBoxLayout:
+                id: layerone
+                size_hint:1,.33
+                orientation:"horizontal"
+                MDRaisedButton:
+                    id: button1
+                    text: ""
+                    size_hint: .33, 1
+                    md_bg_color: "grey"
+                    on_release: app.button_press("1")
+                MDRaisedButton:
+                    id: button2
+                    text: ""
+                    size_hint: .33, 1
+                    md_bg_color: "grey"
+                    on_release: app.button_press("2")
+                MDRaisedButton:
+                    id: button3
+                    text: ""
+                    size_hint: .33, 1
+                    md_bg_color: "grey"
+                    on_release: app.button_press("3")
+            MDBoxLayout:
+                id: layertwo
+                size_hint:1,.33
+                orientation:"horizontal"
+                MDRaisedButton:
+                    id: button4
+                    text: ""
+                    size_hint: .33, 1
+                    md_bg_color: "grey"
+                    on_release: app.button_press("4")
+                MDRaisedButton:
+                    id: button5
+                    text: ""
+                    size_hint: .33, 1
+                    md_bg_color: "grey"
+                    on_release: app.button_press("5")
+                MDRaisedButton:
+                    id: button6
+                    text: ""
+                    size_hint: .33, 1
+                    md_bg_color: "grey"
+                    on_release: app.button_press("6")
+
+            MDBoxLayout:
+                id: layerthree
+                size_hint:1,.33
+                orientation:"horizontal"
+                MDRaisedButton:
+                    id: button7
+                    text: ""
+                    size_hint: .33, 1
+                    md_bg_color: "grey"
+                    on_release: app.button_press("7")
+                MDRaisedButton:
+                    id: button8
+                    text: ""
+                    size_hint: .33, 1
+                    md_bg_color: "grey"
+                    on_release: app.button_press("8")
+                MDRaisedButton:
+                    id: button9
+                    text: ""
+                    size_hint: .33, 1
+                    md_bg_color: "grey"
+                    on_release: app.button_press("9")
+
+        MDBoxLayout:
+            id: resetbox
+            size_hint: 1, .2
+            orientation: 'vertical'
+            MDRaisedButton:
+                id: resetbutton
+                text: "Reset"
+                size_hint: .5, .75
+                pos_hint: {'center_x': .5, 'center_y': .5}
+                on_release: app.reset()
